# api/school/v1/school.pb.validate.go
@@ -35,210 +35,6 @@ var (
 	_ = sort.Sort
 )
 
-// Validate checks the field values on LoginRequest with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *LoginRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on LoginRequest with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in LoginRequestMultiError, or
-// nil if none found.
-func (m *LoginRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *LoginRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Email
-
-	// no validation rules for Password
-
-	if len(errors) > 0 {
-		return LoginRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// LoginRequestMultiError is an error wrapping multiple validation errors
-// returned by LoginRequest.ValidateAll() if the designated constraints aren't met.
-type LoginRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m LoginRequestMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m LoginRequestMultiError) AllErrors() []error { return m }
-
-// LoginRequestValidationError is the validation error returned by
-// LoginRequest.Validate if the designated constraints aren't met.
-type LoginRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e LoginRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e LoginRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e LoginRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e LoginRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e LoginRequestValidationError) ErrorName() string { return "LoginRequestValidationError" }
-
-// Error satisfies the builtin error interface
-func (e LoginRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sLoginRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = LoginRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = LoginRequestValidationError{}
-
-// Validate checks the field values on LoginReply with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *LoginReply) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on LoginReply with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in LoginReplyMultiError, or
-// nil if none found.
-func (m *LoginReply) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *LoginReply) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Token
-
-	if len(errors) > 0 {
-		return LoginReplyMultiError(errors)
-	}
-
-	return nil
-}
-
-// LoginReplyMultiError is an error wrapping multiple validation errors
-// returned by LoginReply.ValidateAll() if the designated constraints aren't met.
-type LoginReplyMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m LoginReplyMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m LoginReplyMultiError) AllErrors() []error { return m }
-
-// LoginReplyValidationError is the validation error returned by
-// LoginReply.Validate if the designated constraints aren't met.
-type LoginReplyValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e LoginReplyValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e LoginReplyValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e LoginReplyValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e LoginReplyValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e LoginReplyValidationError) ErrorName() string { return "LoginReplyValidationError" }
-
-// Error satisfies the builtin error interface
-func (e LoginReplyValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sLoginReply.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = LoginReplyValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = LoginReplyValidationError{}
-
 // Validate checks the field values on HelloRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
