# internal/routers/user_router.go
@@ -62,4 +62,14 @@ func userMiddlewares(c *middlewareConfig) {
 	//c.setSinglePath("POST", "/api/v1/user/condition", middleware.Auth())    // GetByCondition get user by condition
 	//c.setSinglePath("POST", "/api/v1/user/list/ids", middleware.Auth())    // ListByIDs list of user by batch id
 	//c.setSinglePath("GET", "/api/v1/user/list", middleware.Auth())    // ListByLastID list user by last id
+	//c.setSinglePath("GET", "/api/user/auth", middleware.Auth())    // Login login
+	//c.setSinglePath("GET", "/api/v1/user/auth", middleware.Auth())    // Login login
+	//c.setSinglePath("POST", "/api/v1/user/auth", middleware.Auth())    // Login login
+	//c.setSinglePath("POST", "/api/auth/login", middleware.Auth())    // Login login
+	//c.setSinglePath("POST", "/api/user/info", middleware.Auth())    // Info ......
+	//c.setSinglePath("POST", "/api/auth/codes", middleware.Auth())    // Codes ......
+	//c.setSinglePath("POST", "/api/auth/logout", middleware.Auth())    // Logout ......
+	//c.setSinglePath("GET", "/api/user/info", middleware.Auth())    // Info ......
+	//c.setSinglePath("GET", "/api/auth/codes", middleware.Auth())    // Codes ......
+	//c.setSinglePath("GET", "/api/auth/logout", middleware.Auth())    // Logout ......
 }
